Fix dark mode

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -27,12 +27,13 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme="dark"] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #af9ddc;
+  --ifm-navbar-link-hover-color: #c0b2e1;
+  --ifm-color-primary-dark: #a08ad6;
+  --ifm-color-primary-darker: #9278d0;
+  --ifm-color-primary-darkest: #8267c8;
+  --ifm-color-primary-light: #d0c5e8;
+  --ifm-color-primary-lighter: #dfd9ef;
+  --ifm-color-primary-lightest: #efecf7;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
